--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -119,6 +119,11 @@ flags:
     paths:
       - src/OpenTelemetry.ResourceDetectors.Azure
 
+  unittests-Resources.Gcp:
+    carryforward: true
+    paths:
+      - src/OpenTelemetry.Resources.Gcp
+
   unittests-ResourceDetectors.Host:
     carryforward: true
     paths:
