--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -79,6 +79,9 @@ components:
   src/OpenTelemetry.ResourceDetectors.ProcessRuntime/:
     - Kielek
     - lachmatt
+  src/OpenTelemetry.Resources.Gcp/:
+    - matt-hensley
+    - pyohannes
   src/OpenTelemetry.Sampler.AWS/:
     - srprash
     - atshaw43
@@ -169,6 +172,9 @@ components:
   test/OpenTelemetry.ResourceDetectors.ProcessRuntime.Tests/:
     - Kielek
     - lachmatt
+  test/OpenTelemetry.Resources.Gcp.Tests/:
+    - matt-hensley
+    - pyohannes
   test/OpenTelemetry.Sampler.AWS.Tests/:
     - srprash
     - atshaw43
