--- a/.github/workflows/add-labels.yml
+++ b/.github/workflows/add-labels.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Add labels for component found in bug issue descriptions
         shell: pwsh
         run: |
-          .\build\add-labels.ps1 -issueNumber $env:ISSUE_NUMBER -issueBody $env:ISSUE_BODY
+          .\build\scripts\add-labels.ps1 -issueNumber $env:ISSUE_NUMBER -issueBody $env:ISSUE_BODY
         env:
           GH_TOKEN: ${{ github.token }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
