--- a/.github/workflows/Component.Package.yml
+++ b/.github/workflows/Component.Package.yml
@@ -45,54 +45,18 @@ jobs:
         path: 'src/*/bin/Release/*.*nupkg'
 
     - name: Publish NuGets
+      env:
+        NUGET_TOKEN_EXISTS: ${{ secrets.NUGET_TOKEN != '' }}
+      if: env.NUGET_TOKEN_EXISTS == 'true' # Skip NuGet publish if run on a fork without the secret
       run: |
         nuget push src/*/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.NUGET_TOKEN }} -SymbolApiKey ${{ secrets.NUGET_TOKEN }}
 
     - name: Create GitHub Release
       shell: pwsh
       run: |
-        $packages = (Get-ChildItem -Path src/*/bin/Release/*.nupkg).Name
+        Import-Module .\build\scripts\post-release.psm1
 
-        $notes = ''
-        $firstPackageVersion = ''
-
-        foreach ($package in $packages)
-        {
-            $match = [regex]::Match($package, '(.*)\.(\d+\.\d+\.\d+.*?)\.nupkg')
-            $packageName = $match.Groups[1].Value
-            $packageVersion = $match.Groups[2].Value
-
-            if ($firstPackageVersion -eq '')
-            {
-              $firstPackageVersion = $packageVersion
-            }
-
-            $notes +=
-        @"
-        * NuGet: [$packageName v$packageVersion](https://www.nuget.org/packages/$packageName/$packageVersion)
-
-          See [CHANGELOG](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/src/$packageName/CHANGELOG.md) for details.
-
-        "@
-        }
-
-        $releaseName = '${{ inputs.release-name || inputs.project-name }}'
-
-        if ($firstPackageVersion -match '-alpha' -or $firstPackageVersion -match '-beta' -or $firstPackageVersion -match '-rc')
-        {
-          gh release create ${{ github.ref_name }} `
-            --title "$releaseName v$firstPackageVersion" `
-            --verify-tag `
-            --notes "$notes" `
-            --prerelease
-        }
-        else
-        {
-          gh release create ${{ github.ref_name }} `
-            --title "$releaseName v$firstPackageVersion" `
-            --verify-tag `
-            --notes "$notes" `
-            --latest
-        }
+        CreateRelease `
+          -tag '${{ github.ref_name }}'
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ github.token }}
