--- a/test/OpenTelemetry.Instrumentation.AWS.Tests/OpenTelemetry.Instrumentation.AWS.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.AWS.Tests/OpenTelemetry.Instrumentation.AWS.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.300" />
     <PackageReference Include="AWSSDK.Bedrock" Version="3.7.303.3" />
     <PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.303.3" />
+    <PackageReference Include="AWSSDK.BedrockAgentRuntime" Version="3.7.303.3" />
     <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="$(OpenTelemetryCoreLatestVersion)" />
   </ItemGroup>
 
